[project]
name = "fix-migration-order"
version = "0.1.0"
description = "Fix your alembic migrations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"

[project.scripts]
fix-migrations = "main:main"
